complete source code for 2021-07-18 - Restore third party lib effolkrodium-random from vcpkg - complete test and benchmark code - complete branchless version of union function

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,5 @@
+project(project_test)
+
 add_executable(project_test)
 target_compile_options(project_test PRIVATE ${LONGLP_DESIRED_COMPILE_OPTIONS})
 target_compile_features(project_test PRIVATE ${LONGLP_DESIRED_COMPILE_FEATURES})
